Fixed problems and mistakes -fixed problems with url -add response -change fields to private -fixed problem with try-with-resources

--- a/templates/addStudent.html
+++ b/templates/addStudent.html
@@ -52,7 +52,7 @@
 
 <h1>Додати студента</h1>
 
-<form action="/addStudent.html" method="post">
+<form action="/students/add" method="post">
     <label>Ім’я:</label>
     <input type="text" name="firstName" required>
 
