--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
 </table>
 
 <div class="btn-container">
-    <a href="/addStudent.html" class="btn">➕ Додати студента</a>
+    <a href="/students/add" class="btn">➕ Додати студента</a>
 </div>
 
 </body>
